--- a/docs-content/release-notes.html.md.erb
+++ b/docs-content/release-notes.html.md.erb
@@ -3,7 +3,7 @@ title: Release Notes for Altoros Heartbeat for PCF
 owner: Partners
 ---
 
-These are release notes for Altoros Heartbeat for PCF.
+These are release notes for Altoros Heartbeat for Pivotal Cloud Foundry (PCF).
 
 ##<a id="ver"></a> v0.8.90
 
