--- a/docs-content/statsd.html.md.erb
+++ b/docs-content/statsd.html.md.erb
@@ -3,17 +3,20 @@ title: StatsD Integration
 owner: Partners
 ---
 
-##<a id='about'></a> About StatsD integration
+##<a id='about'></a> About StatsD Integration
 
-This section is intended for application developers who are going to use the Altoros Heartbeat service to collect custom metrics from their apps. The section describes how to enable an app to send metrics to the StatsD server. These metrics are subsequently pushed to Graphite’s Carbon component for caching and persistence.
+This section is intended for app developers who are going to use the Altoros Heartbeat service to collect custom metrics from their apps.
+The section describes how to enable an app to send metrics to the StatsD server.
+These metrics are subsequently pushed to Graphite’s Carbon component for caching and persistence.
 
-##<a id='integration'></a> Integrating Heartbeat’s StatsD into the app
+##<a id='integration'></a> Integrating Heartbeat’s StatsD into the App
 
 1. Download a language-specific StatsD client library from [this Github page](https://github.com/etsy/statsd/wiki#client-implementations) and add it into your app code.
 
-1. Follow steps 1-5 from the [Binding a Service Instance to the App]() section below to bind the Heartbeat service to your app.
+1. Follow steps 1-5 from [Binding a Service Instance to the App](./jmxtrans.html#binding) to bind the Heartbeat service to your app.
 
-1. Parse environment variables in the code to get a StatsD endpoint. To do this:
+1. Parse environment variables in the code to get a StatsD endpoint.
+   To do this:
 
       a. Parse environment variables of your app.
 
@@ -38,24 +41,26 @@ This section is intended for application developers who are going to use the Alt
 
       `statsd_prefix`: statsd_prefix is described in the previous step
 
-      `app_name`: for information about the app’s name, refer to [this documentation](http://docs.cloudfoundry.org/devguide/deploy-apps/environment-variable.html#VCAP-APPLICATION).
+      `app_name`: for information about the app’s name, see [this documentation](http://docs.cloudfoundry.org/devguide/deploy-apps/environment-variable.html#VCAP-APPLICATION).
 
-      `app_index`: for information about the app’s index, refer to [this documentation](http://docs.cloudfoundry.org/devguide/deploy-apps/environment-variable.html#CF-INSTANCE-INDEX).
+      `app_index`: for information about the app’s index, see [this documentation](http://docs.cloudfoundry.org/devguide/deploy-apps/environment-variable.html#CF-INSTANCE-INDEX).
 
-      For an example, refer to [this GitHub repository](https://github.com/Altoros/tweets-fetcher/blob/23e1fe7a3c2fbccaca1e0ca1dc09590e8f285c88/main.go#L130).
+      For an example, see [this GitHub repository](https://github.com/Altoros/tweets-fetcher/blob/23e1fe7a3c2fbccaca1e0ca1dc09590e8f285c88/main.go#L130).
 
-1. Configure the StatsD client library (e.g. set host, port, prefix). For an example, refer to [this GitHub repository](https://github.com/Altoros/tweets-fetcher/blob/23e1fe7a3c2fbccaca1e0ca1dc09590e8f285c88/main.go#L125-L132).
+1. Configure the StatsD client library (e.g. set host, port, prefix). For an example, see [this GitHub repository](https://github.com/Altoros/tweets-fetcher/blob/23e1fe7a3c2fbccaca1e0ca1dc09590e8f285c88/main.go#L125-L132).
 
-1. Define custom metrics inside the app’s code (using the StatsD library). For an example, refer to [this GitHub repository]
+1. Define custom metrics inside the app’s code (using the StatsD library).
+   For an example, see [this GitHub repository]
 (https://github.com/Altoros/tweets-fetcher/blob/5018d3753dc67c38bb6d89c9fbe6d84cb547b43b/fetcher/fetcher.go#L103).
 
-1. Push the app to PCF.
+1. Push the app to Pivotal Cloud Foundry (PCF).
 
-1. Create a custom dashboard in Grafana. For a sample dashboard, refer to [this GItHub repository](https://github.com/Altoros/tweets-fetcher/tree/master/grafana-dashboard).
+1. Create a custom dashboard in Grafana.
+   For a sample dashboard, see [this GItHub repository](https://github.com/Altoros/tweets-fetcher/tree/master/grafana-dashboard).
 
 For an example of an app (written in golang) that sends custom metrics to a Grafana dashboard, see [this GitHub repository](https://github.com/Altoros/tweets-fetcher/).
 
-##<a id='example'></a> Example of an app with StatsD integration
+##<a id='example'></a> Example of an App with StatsD Integration
 
 1. Navigate to cf marketplace.
 
@@ -81,6 +86,7 @@ For an example of an app (written in golang) that sends custom metrics to a Graf
 
       <pre class="terminal">cf restage app_name</pre>
 
-##<a id='create'></a> Creating a custom dashboard
+##<a id='create'></a> Create a Custom Dashboard
 
-For information about creating and editing Grafana graphs and panels, refer to [Grafana documentation](http://docs.grafana.org/guides/getting_started/). For an example of an app’s dashboard, refer to [this Github repository](https://github.com/Altoros/tweets-fetcher/tree/master/grafana-dashboard).
+For information about creating and editing Grafana graphs and panels, see [Grafana documentation](http://docs.grafana.org/guides/getting_started/).
+For an example of an app’s dashboard, see [this Github repository](https://github.com/Altoros/tweets-fetcher/tree/master/grafana-dashboard).
