--- a/docs-content/index.html.md.erb
+++ b/docs-content/index.html.md.erb
@@ -10,12 +10,12 @@ Do not use this product in a PCF production environment.
 </p>
 
 This documentation describes the Altoros Heartbeat for Pivotal Cloud Foundry (PCF) tile. Installing this tile
-creates a service that enables operators and application developers to track all system and application metrics
-from their Pivotal Cloud Foundry installation in one place.
+creates a service that enables operators and app developers to track all system and application metrics
+from their PCF installation in one place.
 
 ## <a id='overview'></a>Overview
 
-Altoros Heartbeat is a multi-tenant monitoring service that uses Cloud Foundry’s User Account and Authentication (UAA)
+Altoros Heartbeat for PCF is a multi-tenant monitoring service that uses Cloud Foundry’s User Account and Authentication (UAA)
 server to grant access to apps and resources based on the user roles and rights within a PCF deployment. The service pulls,
 stores, visualizes and sends alerts on the metrics emitted by VMs, PCF components, services, and apps running on PCF. 
 
@@ -30,12 +30,18 @@ This enables operators to monitor the named services without any additional conf
 
 Altoros Heartbeat for PCF includes the following key features:
 
-* **Pivotal Cloud Foundry monitoring**. The solution collects metrics emitted by all components of Pivotal Cloud Foundry. 
-* **IaaS-level monitoring**. Heartbeat collects metrics from CPU, memory usage, IO, network, VM states, and more, regardless of the underlying infrastructure.
-* **Third-party services monitoring**. The solution provides a possibility to collect metrics from MySQL, PostgreSQL, Redis, and RabbitMQ. 
-* **Application monitoring**. Standard (CPU, memory, or disk usage), arbitrary (gauges, counters, timings, sets), and HTTP-specific (requests per second, status codes, error rates, and more) metrics are gathered.
-* **SSO and Multitenancy**. The solution uses Cloud Foundry’s User Account and Authentication (UAA) service to control access to apps and resources based on user roles and rights within the platform. Multitenancy is implemented according to Cloud Foundry UAA roles. Dedicated shares of the solution are deployed to different spaces to collect metrics from the apps and services running within.
-* **Alerting**. Alerts can be defined for each dashboard panel and users get immediate notifications via email, Slack, and other notification channels. 
+* **PCF monitoring**. Collects metrics emitted by all components of PCF. 
+* **IaaS-level monitoring**. Collects metrics from CPU, memory usage, IO, network, VM states, and more,
+  regardless of the underlying infrastructure.
+* **Third-party services monitoring**. Provides the ability  to collect metrics from MySQL, PostgreSQL, Redis, and RabbitMQ. 
+* **Application monitoring**. Gathers standard (CPU, memory, or disk usage), arbitrary (gauges, counters, timings, sets),
+  and HTTP-specific (requests per second, status codes, error rates, and more) metrics.
+* **SSO and multi-Tenancy**. Uses the Cloud Foundry UAA service
+  to control access to apps and resources based on user roles and rights within the platform.
+  Multi-tenancy is implemented according to Cloud Foundry UAA roles.
+  Dedicated shares of the solution are deployed to different spaces to collect metrics from the apps and services running within.
+* **Alerts**. Can be defined for each dashboard panel, and users get immediate notifications
+  via email, Slack, and other notification channels. 
 
 ## <a id="snapshot"></a>Product Snapshot
 
@@ -54,19 +60,19 @@ The following table provides version and version-support information about Altor
     </tr>
     <tr>
         <td>Software component version</td>
-        <td>Grafana v4.3, CollectD v5.7.1, StatsD v0.8.0, Carbon API 0.8.0, GoCarbon 0.9.1</td>
+        <td>Grafana v4.3, collectd v5.7.1, StatsD v0.8.0, Carbon API 0.8.0, and GoCarbon 0.9.1</td>
     </tr>
     <tr>
         <td>Compatible Ops Manager version(s)</td>
-        <td>v1.9.x, v1.10.x</td>
+        <td>v1.9.x and v1.10.x</td>
     </tr>
     <tr>
         <td>Compatible Elastic Runtime version(s)</td>
-        <td>v1.9.x, v1.10.x</td>
+        <td>v1.9.x and v1.10.x</td>
     </tr>
     <tr>
         <td>IaaS support</td>
-        <td>AWS, OpenStack</td>
+        <td>AWS and OpenStack</td>
     </tr>
     <tr>
         <td>IPsec support?</td>
@@ -76,12 +82,13 @@ The following table provides version and version-support information about Altor
 
 ## <a id="prerequisites"></a>Prerequisites
 
-To complete installation of Altoros Heartbeat for PCF, you need:
+To complete installation of Altoros Heartbeat for PCF, you need the following:
 
 * An AWS S3 bucket or WebDAV with credentials to store alert images from Grafana
 * Alert notification endpoint (SMTP server for email notifications, Slack, Sensu) with credentials
 * CPU/RAM/disk resources for 7 VMs 
-* Internet connectivity between the networks where the PCF deployment and Heartbeat are installed. Altoros recommends installing Heartbeat on the same network with PCF.
+* Internet connectivity between the networks where the PCF deployment and Heartbeat are installed.
+  Altoros recommends installing Heartbeat on the same network with PCF.
 
 ## <a id="reqs"></a>Requirements
 
@@ -89,17 +96,20 @@ Altoros Heartbeat for PCF has the following requirements:
 
 * [Elastic Runtime](https://network.pivotal.io/products/elastic-runtime) v1.9.x, 1.10.x
 * [Ops Manager](https://network.pivotal.io/products/ops-manager) v.1.9.x, 1.10.x
-* Installation of the collectd add-on for PCF is required to enable PCF component VMs and the VMs of any other BOSH-deployed services expose system metrics to Heartbeat. 
+* Installation of the collectd add-on for PCF is required to enable PCF component VMs and
+  the VMs of any other BOSH-deployed services expose system metrics to Heartbeat. 
 For more information, see [Installing collectd Add-on for PCF](installing.html). 
 * (Optional) To enable collection of JMX metrics from Java apps, the Altoros Heartbeat tile for PCF requires a custom Java buildpack. 
 For more information, see [JMXTrans Agent Integration](jmxtrans.html).
-* (Optional) To enable collection of custom application metrics, integration of a StatsD library into the app's code is required. For more information, see [StatsD Integration](statsd.html).
+* (Optional) To enable collection of custom application metrics, integration of a StatsD library into the app's code is required.
+  For more information, see [StatsD Integration](statsd.html).
 
 ## <a id="limitations"></a>Limitations
 
 The Altoros Heartbeat for PCF tile has the following limitations:
 
-* Offline buildpacks are unavailable. Only the online version of the buildpack from [this GitHub repository](https://github.com/Altoros/java-buildpack#jmx-agent-integration) can be used to collect JMX metrics from Java apps. 
+* Offline buildpacks are unavailable. Only the online version of the buildpack from 
+  [this GitHub repository](https://github.com/Altoros/java-buildpack#jmx-agent-integration) can be used to collect JMX metrics from Java apps. 
 * Users are limited to using MariaDB to store internal Heartbeat data such as user sessions, mappings, dashboards, UI configs, etc.
 * High availability mode is currently not supported.
 * Only v1.0.8 or earlier versions of Crunchy PostgreSQL for PCF are currently supported.
