--- a/docs-content/installingcollectd.html.md.erb
+++ b/docs-content/installingcollectd.html.md.erb
@@ -7,24 +7,27 @@ This topic describes how to add collectd to your Pivotal Cloud Foundry (PCF) dep
 
 ## <a id='about'></a>About collectd Add-on for PCF
 
-This add-on is required to enable the Heartbeat monitoring solution consume system metrics 
-from the virtual machines that make up a PCF deployment.  The [collectD](https://collectd.org/) add-on gathers VM
+This add-on is required to enable the Altoros Heartbeat monitoring solution consume system metrics 
+from the VMs that make up a PCF deployment.  The [collectd](https://collectd.org/) add-on gathers VM
 metrics from PCF platform components and any other BOSH-deployed services (e.g., databases)
-and makes this information available to Heartbeat over the network. 
+and makes this information available to Altoros Heartbeat over the network. 
 
 ## <a id='prerequisites'></a>Prerequisites
 
-<p class="note"><strong>Note</strong>: CollectD Add-on for PCF does not work on Windows machines.</p>
+<p class="note"><strong>Note</strong>: collectd add-on for PCF does not work on Windows machines.</p>
 
-To complete the collectD Add-on installation:
+To complete the collectd add-on installation:
 
-* You must be a PCF operator with admin rights. See the [Understanding Pivotal Cloud Foundry User Types](https://docs.pivotal.io/pivotalcf/customizing/user-types.html#operator) topic for more information.
+* You must be a PCF operator with admin rights.
+  For more information, see [Understanding Pivotal Cloud Foundry User Types](https://docs.pivotal.io/pivotalcf/customizing/user-types.html#operator).
 * You must have a Pivotal Operations Manager (Ops Manager) v1.9 or later.
-* CollectD Add-on uses 50 MB of memory. Ensure you have at least 128 MB of memory free on each VM before deploying collectd Add-on.
+* collectd add-on uses 50 MB of memory.
+  Ensure you have at least 128 MB of memory free on each VM before deploying collectd add-on.
 
-## <a id='manifest'></a>Creating a CollectD Manifest
+## <a id='manifest'></a>Creating a collectd Manifest
 
-A collectd manifest is a YML file that contains runtime configuration information for the collectd Add-on. Follow the steps below to create a collectd manifest for your deployment:
+A collectd manifest is a YML file that contains runtime configuration information for the collectd add-on.
+Follow the steps below to create a collectd manifest for your deployment:
 
 1. Create a file named `collectd.yml`, starting with the code below as a template:
 
@@ -49,9 +52,9 @@ A collectd manifest is a YML file that contains runtime configuration informatio
 
 1. Replace the values listed in the template as follows:
 
-* `exclude: deployments`: (optional) Specify the name of the deployment to mass exclude from the collectd add-on coverage.
+* `exclude: deployments`: (Optional) Specify the name of the deployment to mass exclude from the collectd add-on coverage.
 
-<p class="note"><strong>Note</strong> In case this functionality is not required, you should remove this section.</p>
+    <p class="note"><strong>Note</strong> If this functionality is not required, remove this section.</p>
 
 * `collectd: graphite_prefix`: Do not change the graphit_prefix name. It must be `cf.collectd`.
 * `collectd: graphite_servers`: List the IP address of your Heartbeat VM.
@@ -59,9 +62,9 @@ A collectd manifest is a YML file that contains runtime configuration informatio
 
 ##<a id='deploy'></a> Downloading and Deploying the collectd Add-on
 
-1. Download the collectd Add-on software binary from the [Pivotal Network](https://network.pivotal.io/) to your local machine.
+1. Download the collectd add-on software binary from the [Pivotal Network](https://network.pivotal.io/) to your local machine.
 
-1. Copy the software binary to your Ops Manager virtual machine (VM).
+1. Copy the software binary to your Ops Manager VM.
 
       <pre class="terminal">$ scp -i PATH/TO/PRIVATE/KEY collectd-10.tgz ubuntu@YOUR-OPS-MANAGER-VM-IP:</pre>
 
@@ -89,13 +92,16 @@ A collectd manifest is a YML file that contains runtime configuration informatio
 
       <pre class="terminal">$ bosh upload release ~/BINARY-NAME.tgz</pre>
 
-1. From the command line, confirm that the upload of the collectd software binary completed. You should see the collectd release.
+1. From the command line, confirm that the upload of the collectd software binary completed.
+   You should see the collectd release.
  
       <pre class="terminal">$ bosh releases</pre>
 
 1. Update your runtime configuration to include the collectd add-on.
 
-      <p class="note"><strong>Note</strong>: If you installed other BOSH add-ons, you must merge the collectd manifest into your existing add-on manifest. Append the contents of `collectd.yml` to your existing add-on YML file.</p>
+      <p class="note"><strong>Note</strong>: If you installed other BOSH add-ons,
+         you must merge the collectd manifest into your existing add-on manifest.
+         Append the contents of `collectd.yml` to your existing add-on YML file.</p>
 
       <pre class="terminal">$ bosh update runtime-config PATH/YOUR-ADD-ON-YML.yml</pre>
 
@@ -131,11 +137,13 @@ A collectd manifest is a YML file that contains runtime configuration informatio
 
       <pre class="terminal">$ monit start collectd</pre>
 
-      b. Run the `monit summary` again. If you do not see the processes mentioned above, check `/var/vcap/sys/log/collectd` logs for errors.
+      b. Run the `monit summary` again. If you do not see the processes mentioned above,
+         check `/var/vcap/sys/log/collectd` logs for errors.
 
-## <a id='uninstall'></a>Uninstalling the CollectD add-on
+## <a id='uninstall'></a>Uninstalling the collectd Add-on
 
-Follow the steps below to remove the collectd add-on from your existing runtime config and roll back to a previous configuration: 
+Follow the steps below to remove the collectd add-on from your existing runtime config and
+roll back to a previous configuration: 
 
 1. SSH into Ops Manager.
 
@@ -145,7 +153,7 @@ Follow the steps below to remove the collectd add-on from your existing runtime 
 
       <pre class="terminal">$ bosh runtime-config > PATH_TO_SAVE_THE_RUNTIME_CONFIG</pre>
 
-1. Remove the lines added at the *Downloading and Deploying the collectd Add-on* stage. 
+1. Remove the lines added at the *Downloading and Deploying the collectd add-on* stage. 
 
 1. Update the runtime configuration.
 
