first use of product name fixed[#148921319]

--- a/docs-content/using.html.md.erb
+++ b/docs-content/using.html.md.erb
@@ -3,7 +3,7 @@ title: Using Altoros Heartbeat for PCF
 owner: Partners
 ---
 
-This topic describes how to use Altoros Heartbeat for PCF (Pivotal Cloud Foundry).
+This topic describes how to use Altoros Heartbeat for Pivotal Cloud Foundry (PCF).
 
 ##<a id='create'></a> Creating a Service Instance (Heartbeat for Developers)
 
